Have the current weather showing on page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </nav>
     <div class="main-container">
         <div class="search-section">
-            <h2>Search for a City:</h2>
-            <input type="text">
+            <h2>SEARCH FOR A CITY:</h2>
+            <input class="search-input" type="text">
             <button class="search-button">Search</button>
             <div class="search-history">
 
