Forecast now displays on the screen

--- a/index.html
+++ b/index.html
@@ -40,39 +40,39 @@
           </div>
           <div class="fiveday-results">
             <div class="box">
-              <h1 class="date-one">Hekk</h1>
+              <h1 class="date-one"></h1>
               <div class="weather-icon-one"><img src="" /></div>
-              <p class="temp-one">ef</p>
-              <p class="wind-one">ef</p>
-              <p class="hum-one">ef</p>
+              <p class="temp-one"></p>
+              <p class="wind-one"></p>
+              <p class="hum-one"></p>
             </div>
             <div class="box">
-              <h1 class="date-two">Hewllo</h1>
+              <h1 class="date-two"></h1>
               <div class="weather-icon-two"><img src="" /></div>
-              <p class="temp-two">ee</p>
-              <p class="wind-two">ee</p>
-              <p class="hum-two">ee</p>
+              <p class="temp-two"></p>
+              <p class="wind-two"></p>
+              <p class="hum-two"></p>
             </div>
             <div class="box">
-              <h1 class="date-one">gewg</h1>
-              <div class="weather-icon-one"><img src="" /></div>
-              <p class="temp-one">eg</p>
-              <p class="wind-one">eg</p>
-              <p class="hum-one">eg</p>
+              <h1 class="date-three"></h1>
+              <div class="weather-icon-three"><img src="" /></div>
+              <p class="temp-three"></p>
+              <p class="wind-three"></p>
+              <p class="hum-three"></p>
             </div>
             <div class="box">
-              <h1 class="date-one">eg</h1>
-              <div class="weather-icon-one"><img src="" /></div>
-              <p class="temp-one">egge</p>
-              <p class="wind-one">eg</p>
-              <p class="hum-one">erer</p>
+              <h1 class="date-four"></h1>
+              <div class="weather-icon-four"><img src="" /></div>
+              <p class="temp-four"></p>
+              <p class="wind-four"></p>
+              <p class="hum-four"></p>
             </div>
             <div class="box">
-              <h1 class="date-one">ererr</h1>
-              <div class="weather-icon-one"><img src="" /></div>
-              <p class="temp-one">erer</p>
-              <p class="wind-one">erer</p>
-              <p class="hum-one">erer</p>
+              <h1 class="date-five"></h1>
+              <div class="weather-icon-five"><img src="" /></div>
+              <p class="temp-five"></p>
+              <p class="wind-five"></p>
+              <p class="hum-five"></p>
             </div>
           </div>
         </div>
@@ -81,3 +81,7 @@
     <script src="/JS/script.js"></script>
   </body>
 </html>
+<!-- for (let i = 0; i < historyButton.length; i++) {
+  historyButton[i].addEventListener("click", getHistory(historyButton[i].textContent))
+  
+} -->
