Removed some test code and added some more styling to css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Dashboard</title>
-    <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
     <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
@@ -20,9 +20,7 @@
         <h2>SEARCH FOR A CITY:</h2>
         <input class="search-input" type="text" />
         <button class="search-button">Search</button>
-        <div class="search-history">
-          
-        </div>
+        <div class="search-history"></div>
       </div>
       <div class="results">
         <div class="current-result">
@@ -78,10 +76,6 @@
         </div>
       </div>
     </div>
-    <script src="/JS/script.js"></script>
+    <script src="./JS/script.js"></script>
   </body>
 </html>
-<!-- for (let i = 0; i < historyButton.length; i++) {
-  historyButton[i].addEventListener("click", getHistory(historyButton[i].textContent))
-  
-} -->
